// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > renders danger variant 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium transition-colors duration-150
        bg-red-100 text-red-700 dark:bg-red-900/20 dark:text-red-400 px-2.5 py-1 text-xs "
>
  Reddedildi
</span>
`;

exports[`Badge > renders default variant 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium transition-colors duration-150
        bg-gray-100 text-gray-700 dark:bg-gray-800 dark:text-gray-300 px-2.5 py-1 text-xs "
>
  Default
</span>
`;

exports[`Badge > renders info variant 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium transition-colors duration-150
        bg-blue-100 text-blue-700 dark:bg-blue-900/20 dark:text-blue-400 px-2.5 py-1 text-xs "
>
  Bilgi
</span>
`;

exports[`Badge > renders success variant 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium transition-colors duration-150
        bg-green-100 text-green-700 dark:bg-green-900/20 dark:text-green-400 px-2.5 py-1 text-xs "
>
  Onaylandı
</span>
`;

exports[`Badge > renders warning variant 1`] = `
<span
  class="inline-flex items-center rounded-full font-medium transition-colors duration-150
        bg-yellow-100 text-yellow-700 dark:bg-yellow-900/20 dark:text-yellow-400 px-2.5 py-1 text-xs "
>
  Beklemede
</span>
`;
